@@ -1,6 +1,7 @@
 import unittest2 as unittest
 from plone.app.testing import applyProfile
 from plone.app.testing import login
+from plone.app.testing import setRoles
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import PloneSandboxLayer
 from plone.app.testing.layers import FunctionalTesting
@@ -12,18 +13,23 @@ class PACollection(PloneSandboxLayer):
     defaultBases = (PLONE_FIXTURE,)
 
     def setUpZope(self, app, configurationContext):
-        # load ZCML
+        import Products.ATContentTypes
+        xmlconfig.file('configure.zcml', Products.ATContentTypes,
+                       context=configurationContext)
+        z2.installProduct(app, 'Products.ATContentTypes')
         import plone.app.collection
         xmlconfig.file('configure.zcml', plone.app.collection,
                        context=configurationContext)
         z2.installProduct(app, 'plone.app.collection')
 
     def setUpPloneSite(self, portal):
+        self.applyProfile(portal, 'Products.ATContentTypes:default')
         applyProfile(portal, 'plone.app.collection:default')
         portal.acl_users.userFolderAddUser('admin',
                                            'secret',
                                            ['Manager'],
                                            [])
+        setRoles(portal, 'admin', ['Manager'])
         login(portal, 'admin')
         workflow = portal.portal_workflow
         workflow.setDefaultChain('simple_publication_workflow')
@@ -32,11 +38,14 @@ class PACollection(PloneSandboxLayer):
         portal.invokeFactory("Document",
                              "collectiontestpage",
                              title="Collection Test Page")
+        workflow.doActionFor(portal.collectiontestpage, "publish")
 
         # add 6 folders, so we can test with them
         for i in range(6):
             portal.invokeFactory('Folder', 'folder_%s' % i)
-        workflow.doActionFor(portal.collectiontestpage, "publish")
+
+    def tearDownZope(self, app):
+        z2.uninstallProduct(app, 'Products.ATContentTypes')
 
 
 PACOLLECTION_FIXTURE = PACollection()
